# well-data-streaming

./: .gitignore  README.md  _production_vstime.py  _session.py  _update.py  dataselect.py  decline.py  request.py  setup.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: logs.py  wells.py
backend/app/pipes/: _database.py
backend/app/routers/: rates.py  wells.py
backend/app/schemas/: _layout.py  _name.py  _perfs.py  _platform.py  _status.py  _tops.py  _well.py  logs.py  wells.py
backend/app/tests/: conftest.py  test_api_rates.py  test_api_wells.py  test_items_completion_perfs_perf.py  test_items_location_survey.py  test_items_location_tops.py  test_items_rates_ratetable.py
backend/app/tests/fixtures/: rates.csv  wells.geojson
backend/docs/: surveys_template.csv  well_proximity_plotly.py
data_dictionary/: _location.py  _production.py  _rates.py
docs/: WellX_Well_real_demo.ipynb  survey3D.py
frontend/: config.js  index.html  package-lock.json  package.json  vite.config.js
hopper/: __init__.py  _constr.py  _general.py  _operate.py  _well.py  _zones.py
tests/: test_items_completion_perfs_interval.py  test_items_completion_perfs_perf.py  test_items_completion_perfs_perfinterval.py  test_items_general_name.py  test_items_rates_rate.py  test_items_rates_rates.py  test_pipes_table.py  test_pipes_utils.py  test_well.py  test_well_general_status.py  test_well_rates.py
wellx/: __init__.py  _custom.py  _table.py  _welldash.py  integrated_well_data.py
wellx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+235 files in other folders)
